adding Linda's last edits

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -110,31 +110,41 @@ integrated genetic optimization algorithms; the OPAL framework,
 differentiates itself by being open source (i.e. free to use), massively
 parallel, and fully 3D.
 
+The following information was added on lines 401-404:
 
-The following information was added on lines 479-496:
+These structures are called Power Extractor and Transfer Structure (PETS), 
+and will be located after the septum and quadrupoles in Fig.~7.
+This device is putting the tightest constraints on the beam parameters.  
+The aperture diameter is 17.6 mm and the bunch length should be below 2 mm
+to facilitate large power extraction~[new ref here]   
+
+
+The following information was added on lines 457-475:
 
 
 Overall this solution is satisfactory, and meets all requirements for the new TBA beamline at the AWA.
-A Power Extractor and Transfer Structure (PETS) will be located after the septum and quadrupoles in Fig. 7.
-This device is putting the tightest constraints on the beam parameters.  
-The aperture diameter is 17.6 mm and bunch length should be below 2 mm
-to facilitate large power extraction [new ref here].  
 
-The optimization results shown here were used in part to meet all TBA requirements. 
-After adjustments to include 3D rf field maps and CSR in the dipoles[new ref here] 
-the max beamsizes at the PETS location were below 10 mm with a bunch length of rmsz=1.6 mm. 
-Although the simulation results at the PETS location cannot yet be verified, since the beamline is not yet completely installed, 
-some checks have been possible for the partially completed beamline.  
-Simulations of the partial beamline have been done.
-For example, beam images were taken on the YAG screen located downstream of the kicker and 
-the extracted beam sizes at different kicker angles compared to simulation [new ref here].  
-When it becomes possible to test the complete simulation solution, it is expected that there will not be perfect agreement with simulation;
-for example there may be errors in the fields of beamline elements.  However, the simulation can be a tool to track down the source of
-discrepancies, such as understanding the effect of the gun field on the beam symmetry.  
-More importantly, the optimization results should provide significant improvement in efficiency for achieving a good operational regime.
-
+The TBA line under construction includes a kicker and septum combination to route one bunch train to its own PETS, 
+while the other bunch train is undeflected and goes to a different PETS.  
+The optimization results shown here start at the gun and go through to the first quadrupole after the septum (s3=19.4~(m)).  
+These results were used as the basis for the full solution up to the PETS [new ref here].
+After adjustments to include 3D rf field maps and CSR in the dipoles~[new ref here], 
+the maximum beam sizes at the PETS location were below 10mm with a bunch length of rmsz = 1.6mm.  
+Although the simulation results at the PETS location cannot yet be verified, 
+since the beamline is not yet completely installed, some checks have been possible for the partially completed beamline. 
+For example, beam images were taken on the YAG screen located downstream of the kicker, 
+and it was found that the extracted beam sizes at different kicker angles 
+were in good agreement with simulation results~[new ref here]. 
+When it becomes possible to test the complete simulation solution, 
+it is expected that there will not be perfect agreement with simulation; 
+for example there may be errors in the fields of beamline elements. 
+However, the simulation can be a tool to track down the source of discrepancies, 
+such as understanding the effect of the gun field on the beam symmetry. 
+More importantly, the optimization results should provide significant improvement 
+in efficiency for achieving a good operational regime.
 
 }
+
 
 
 
