--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -677,18 +677,16 @@ A scan of time step and hyper parameters was done to determine computational set
 Then a full scale physics optimization was performed.
 Optimization of the 3D beam size and energy spread was accomplished.
 The TBA beam line presented is currently being installed at the AWA.
-Once installation is complete, 
-the results shown here will guide future experiments at the AWA.
+Once installation is complete, the results shown here will guide future experiments at the AWA.
 
 In contrast to approaches that are tightly coupled to the optimization
 algorithm, the range of possible applications is much wider.
 Even in cases where the mathematical model of the forward solver is not known
-exactly, fixed or on the real time measurements can be used to guide the
+exactly, fixed or real time measurements can be used to guide the
 search for the Pareto optimal solutions.
-Finally, combining a multi-objective optimization framework such as 
-the one presented with practical experience in the field should expedite 
-the decision making process in the design and operation of particle 
-accelerators.
+Finally, combining a multi-objective optimization framework, such as 
+the one presented, with practical experience in the field should expedite 
+the decision making process in the design and operation of particle accelerators.
 
  
 
