adding bib to tex file and moving figures

--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -7,7 +7,7 @@ of a photoinjector operated in the space charge dominated regime is presented.
 
 \begin{figure}
     \centering
-      \includegraphics[width=0.4\linewidth]{figures/hypervolume}
+      \includegraphics[width=0.4\linewidth]{hypervolume}
   \caption{The hypervolume for a two-objective optimization problem
   corresponds to the shaded area formed by the dashed rectangles spanned by
   all points on the Pareto front and an arbitrary selected origin $p_o$.}
@@ -29,7 +29,7 @@ The hypervolume of the reference solution ($0.6575$) for our benchmark was
  computed by sampling the solution provided in~\cite{hbwh:05}.
 \begin{figure}
   \centering
-    \includegraphics[width=0.6\linewidth]{figures/valid_front}
+    \includegraphics[width=0.6\linewidth]{valid_front}
   \caption{Variator benchmark after $1100$ function evaluations using binary
            crossover and independent gene mutations (each gene mutates with
            probability $p=\frac{1}{2}$) on a population of $100$
@@ -87,7 +87,7 @@ This will also enable cleaner transport through downstream elements.
 %\vspace{-1em}
 
 \begin{figure*}
-\includegraphics[width=0.9\linewidth]{figures/awa-drawing}
+\includegraphics[width=0.9\linewidth]{awa-drawing}
 	\caption{Side view of the high charge linac at the AWA. 
 		All hardware in this drawing is currently installed. 
 	Note locations $s_1$ and $s_2$, before and after the kicker.}
@@ -96,7 +96,7 @@ This will also enable cleaner transport through downstream elements.
 \end{figure*}
 
 \begin{figure*}
-\includegraphics[width=0.9\linewidth]{figures/tba_dogleg2}
+\includegraphics[width=0.9\linewidth]{tba_dogleg2}
 	\caption{Continuation of the high charge beam line layout at the AWA, top view. 
 		This is the proposed two beam acceleration section. 
 		Only the kicker in this drawing is installed. 
@@ -171,7 +171,7 @@ Note, a smaller time step, \num{1E-13}, is always used in the gun where the
 beam has low energy and is changing rapidly.
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\linewidth]{figures/timestep_comparison_paper}
+	\includegraphics[width=0.8\linewidth]{timestep_comparison_paper}
 	\caption{Comparison of different fidelity models (dT stands for time step).}
 	\label{tstep}
 \end{figure}
@@ -244,13 +244,13 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 	\centering
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{figures/ex-pareto1-paperedit}
+		\includegraphics[width=\textwidth]{ex-pareto1-paperedit}
 		(a) Pareto fronts for ex-1 through ex-4 at $s_1$.
 		%\vspace{2em}
 	\end{minipage}
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{figures/ex-pareto2-paperedit}
+		\includegraphics[width=\textwidth]{ex-pareto2-paperedit}
 		(b) Pareto fronts for ex-1 through ex-4 at $s_2$.
 		%\label{expareto2}
 	\end{minipage}
@@ -353,7 +353,7 @@ a large population size that would fit evenly on these resources was chosen.
 Again, the location of optimization is $s_3=19.4$~(m). 
 \begin{figure}
 	\begin{center}		
-		\includegraphics[width=0.65\textwidth]{figures/paperedit_pareto_front_Q5_xy_vs_pxpy}
+		\includegraphics[width=0.65\textwidth]{paperedit_pareto_front_Q5_xy_vs_pxpy}
 	\end{center} 
 		\caption{Pareto front comparing transverse beam sizes (rms$_{x,y}$) and transverse momentum (rms$_{px,py}$). The yellow star indicates the 
 		point plotted in Fig.~\ref{fig:stat}}
@@ -397,7 +397,7 @@ More importantly, the optimization results should provide significant improvemen
 in efficiency for achieving a good operational regime.
 
 \begin{figure}
-	\includegraphics[width=0.65\textwidth]{figures/xy-max-min-sigma-paper}
+	\includegraphics[width=0.65\textwidth]{xy-max-min-sigma-paper}
 	\caption{Optimized beam sizes along high charge beam line. The gun is located at $s=0$, 
 	both x and y beam sizes are shown. The black line represents the relevant beam line aperture, while
 	the green line indicates the location of the optimization.}
