--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -23,7 +23,7 @@ year = 2018,
 
 @article{jefferson,
 	title = {Simultaneous optimization of the cavity heat load and trip rates in linacs using a genetic algorithm},
-	author = {Terzi\ifmmode \acute{c}\else \'{c}\fi{}, Bal\ifmmode \check{s}\else \v{s}\fi{}a and Hofler, Alicia S. and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
+	author = {Terzic, Balsa and Hofler, Alicia and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
 	journal = {Phys. Rev. ST Accel. Beams},
 	volume = {17},
 	issue = {10},
@@ -80,9 +80,8 @@ year = 2018,
 
 
 @article{hofler13,
-	author         = "Hofler, Alicia and Terzic, Balsa and Kramer, Matthew and
-	Zvezdin, Anton and Morozov, Vasiliy and Roblin, Yves and
-	Lin, Fanglei and Jarvis, Colin",
+	author         = "Hofler, Alicia and Terzic, Balsa and Kramer, Matthew 
+	and Zvezdin, Anton and Morozov, Vasiliy and Roblin, Yves and Lin, Fanglei and Jarvis, Colin",
 	title          = "{Innovative applications of genetic algorithms to
 	problems in accelerator physics}",
 	journal        = "Phys. Rev. ST Accel. Beams",
