--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -788,17 +788,15 @@ The authors thank the AWA team for contributing to the
 	10.1016/j.nima.2009.08.027} {\bibfield  {journal} {\bibinfo  {journal} {Nucl.
 			Instrum. Methods Phys. Res. A}\ }\textbf {\bibinfo {volume} {609}},\ \bibinfo
 	{pages} {50} (\bibinfo {year} {2009})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Terzi\ifmmode~\acute{c}\else \'{c}\fi{}}\ \emph
-	{et~al.}(2014)\citenamefont {Terzi\ifmmode~\acute{c}\else \'{c}\fi{}},
+\bibitem [{\citenamefont {Terzic}\ \emph {et~al.}(2014)\citenamefont {Terzic},
 	\citenamefont {Hofler}, \citenamefont {Reeves}, \citenamefont {Khan},
 	\citenamefont {Krafft}, \citenamefont {Benesch}, \citenamefont {Freyberger},\
 	and\ \citenamefont {Ranjan}}]{jefferson}%
 \BibitemOpen
-\bibfield  {author} {\bibinfo {author} {\bibfnamefont {B.~c.~v.}\
-		\bibnamefont {Terzi\ifmmode~\acute{c}\else \'{c}\fi{}}}, \bibinfo {author}
-	{\bibfnamefont {A.~S.}\ \bibnamefont {Hofler}}, \bibinfo {author}
-	{\bibfnamefont {C.~J.}\ \bibnamefont {Reeves}}, \bibinfo {author}
-	{\bibfnamefont {S.~A.}\ \bibnamefont {Khan}}, \bibinfo {author}
+\bibfield  {author} {\bibinfo {author} {\bibfnamefont {B.}~\bibnamefont
+		{Terzic}}, \bibinfo {author} {\bibfnamefont {A.~S.}~\bibnamefont {Hofler}},
+	\bibinfo {author} {\bibfnamefont {C.~J.}\ \bibnamefont {Reeves}}, \bibinfo
+	{author} {\bibfnamefont {S.~A.}\ \bibnamefont {Khan}}, \bibinfo {author}
 	{\bibfnamefont {G.~A.}\ \bibnamefont {Krafft}}, \bibinfo {author}
 	{\bibfnamefont {J.}~\bibnamefont {Benesch}}, \bibinfo {author} {\bibfnamefont
 		{A.}~\bibnamefont {Freyberger}}, \ and\ \bibinfo {author} {\bibfnamefont
