edits to address reviewers second round of comments

--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,3 +1,35 @@
+@inproceedings{chao09,
+	author = {Chao, Y and Ames, F and Baartman, R and Bylinskii, Iouri and Dechoudhury, S and Goh, G and Koscielniak, Shane and E Laxdal, R and Marchetto, M and Merminga, L and Naik, V and A Verzilov, V and Yan, Fang and Zvyagintsev, Vladimir},
+	year = {2009},
+	booktitle = {Proc. of ICAP},
+	pages = {THPSC012},
+	title = {TRIUMF-VECC Electron Linac Beam Dynamics Optimization},
+}
+
+@inproceedings{gong12,
+	author = {Gong, C. and Chao, Y.C.},
+	year = {2012},
+	booktitle = {Proc. of ICAP},
+	pages = {TUABI1},
+	title = {The TRIUMF Optimization Platform and Application to the E-LINAC Injector},
+}
+
+
+@phdthesis{gongthesis15, 
+	author = {Gong, C.},
+	title = {A Novel Optimization Platform and Its Applications to the TRIUMF Energy Recovery Linac}, 
+	school = {The University of Columbia},
+	year = 2015, 
+}
+
+@inproceedings{gong15,
+	author = {Gong, C. and Chao, Y.C.},
+	year = {2015},
+	booktitle = {Proc. of ICAP}
+	pages = {THCWC4},
+	title = {The TRIUMF Optimization Platform and Application to the E-LINAC Injector}
+}
+
 @phdthesis{neveuthesis, 
 author = {Nicole Neveu},
 title = {Beam Line Design for Fully Staged Two Beam Acceleration at the Argonne Wakefield Accelerator Facility}, 
