edits to new bib entries

--- a/paper/submission/ZW10157-response-2.tex
+++ b/paper/submission/ZW10157-response-2.tex
@@ -80,9 +80,7 @@ site for each paper providing Supplemental Materials).
 
 
 
-
-I stand by my
-initial assessment and believe more can be summarized with details
+I stand by my initial assessment and believe more can be summarized with details
 moved to Appendices or Supplemental Materials without diminishing the
 authors' accomplishments. It is true that ``computing and algorithms''
 are listed under PRAB's scope, but keeping the quite detailed
@@ -118,6 +116,15 @@ themselves: Is it more important to be right or effective? Do you want
 to be right on a technicality about ``computing and algorithms,'' or
 do you want to be effective in reaching as many readers as possible?
 
+
+
+
+
+
+
+
+
+
 Sundry proofreading corrections listed by section.
 
 I.
@@ -132,8 +139,7 @@ By calling the selector --> Calling the selector
 
 paragraph 4
 also present in GPT's [ref] optimization system --> also
-present in Cornell's [2005 PRSTAB] and GPT's [ref] optimization
-systems
+present in Cornell's [2005 PRSTAB] and GPT's [ref] optimization systems
 (Note to the authors: Cornell's implementation in APISA pre-dates ALL
 of GPT's work with EA/GA's.)
 
