--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -25,9 +25,9 @@
 @inproceedings{gong15,
 	author = {Gong, C. and Chao, Y.C.},
 	year = {2015},
-	booktitle = {Proc. of ICAP}
+	booktitle = {Proc. of ICAP},
 	pages = {THCWC4},
-	title = {The TRIUMF Optimization Platform and Application to the E-LINAC Injector}
+	title = {The TRIUMF Optimization Platform and Application to the E-LINAC Injector},
 }
 
 @phdthesis{neveuthesis, 
