--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -126,7 +126,7 @@ In order to be able to reliably identify optimal configurations of
   accelerators, we solve large multi-objective design optimization
   problems to automate the investigation for an optimal set of tuning parameters.
   This approach has been used in the past with much 
-  success~\cite{bazarov05,yrss:09,chao09, hofler13,jefferson,gong15, gongthesis15,gull1,gull2,marija}.
+  success~\cite{bazarov05,yrss:09,chao09,gong12,hofler13,jefferson,gong15,gongthesis15,gull1,gull2,marija}.
 The difference here being the implementation and application to a 
 problem at the Argonne Wakefield Accelerator Facility (AWA).
 
