starting to add appendix

--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -698,6 +698,22 @@ The authors thank the AWA team for contributing to the
   contract number DE-AC02-06CH11357 and grant number DE-SC0015479. 
 
 
+\appendix
+
+\section{Code Implementation}
+
+
+
+\section{Example Optimization File}
+
+This examples serves to show how a user can 
+set up a multiobjective optimization run 
+within an OPAL input file. 
+
+The code that follows was used to perfrom ex-1 in Section~\ref{sec:experiments}.
+
+
+
 \bibliography{paper}
 
 \end{document}
