small grammer edits

--- a/paper/submission/ZW10157-response-2.tex
+++ b/paper/submission/ZW10157-response-2.tex
@@ -68,7 +68,6 @@ Application to the E-LINAC Injector", ICAP2015, Shanghai, China, 2015,
 THCWC4}
 
 
-
 I recognize the authors moved some of the source code listings to a
 GitHub repository (may not comply with PRAB publishing practices as
 PRAB provides Supplemental Materials storage and access on its web
@@ -117,25 +116,20 @@ to be right on a technicality about ``computing and algorithms,'' or
 do you want to be effective in reaching as many readers as possible?
 
 
-
-
-
-
+{\bf Our response:} {\color{blue} }
 
 
 
 
 Sundry proofreading corrections listed by section.
+I. paragraph 3: NSGA-II is mentioned but not cited.
 
-I.
+{\bf Our response:} {\color{blue} The citation has been added.}
 
-paragraph 3
-NSGA-II is mentioned but not cited.
 
-II. A.
+II. A. paragraph 4: By calling the selector --$>$ Calling the selector
 
-paragraph 4
-By calling the selector --> Calling the selector
+{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
 
 paragraph 4
 also present in GPT's [ref] optimization system --> also
@@ -143,27 +137,27 @@ present in Cornell's [2005 PRSTAB] and GPT's [ref] optimization systems
 (Note to the authors: Cornell's implementation in APISA pre-dates ALL
 of GPT's work with EA/GA's.)
 
-III. A.
+{\bf Our response:} {\color{blue} The reference to Cornell was added.}
 
-paragraph 2
+III. A: paragraph 2
 search algorithm to get stuck --> search algorithm getting
 stuck
 
-III. B.
+{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
 
-paragraph 3
+III. B. paragraph 3
 checking for idle WORKER --> checking for idle WORKERs
+
+{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
 
 Fig. 3 caption
 $r_k$ --> $r_1$
-
-Fig. 3 caption
 The work $W_j$ are beam dynamics simulation within OPAL.
 --> $W_j$ performs beam dynamics simulations within OPAL.
 
-III. C.
+{\bf Our response:} {\color{blue} The figure caption has been corrected.}
 
-paragraph 1
+III. C. paragraph 1
 shown in Listing 2 --> shown in Listing 1
 
 III. D.
